--- a/src/index.html
+++ b/src/index.html
@@ -5,11 +5,15 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Bundle Template</title>
 
-    <link rel="stylesheet" href="assets/css/style.min.css">
+    <link rel="stylesheet" type="text/css" href="assets/css/style.css">
 </head>
 <body>
     <h1>Bundle Template</h1>
     <p>Hello World !!!</p>
+
+    <section>
+        section
+    </section>
 
     <script src="assets/js/main.min.js"></script>
 </body>
